--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
@@ -4,173 +4,173 @@
   </div> -->
   <div *ngIf="generalInfo" class="user-row">
     <div>
-<<<<<<< HEAD
-      <input [disabled]="(currentPage === 'profile' && !editMode) || currentPage !== 'profile'"
-=======
-      <input [disabled]="!editMode"
-<<<<<<< HEAD:client/src/app/pages/profile/user-profile/header-section/header-section.component.html
->>>>>>> Implemented Pagination and Improved UI.
-        style="display: none"
-        type="file"
-        (change)="onPhotoFileSelected($event)"
-        #fileInput
-      >
+
+      <input [disabled]="!editMode" style="display: none" type="file" (change)="onPhotoFileSelected($event)" #fileInput>
 
       <div [ngClass]="{'hover-img': editMode}" (click)="fileInput.click()">
         <img class="user-photo"
           src="{{(currentPage === 'profile' && editMode ? generalInfoForm.get('photo').value : generalInfo.photo) || 'assets/icons/no_photo.png'}}"
-          alt="Profile Image"
-        >
-=======
-             style="display: none"
-             type="file"
-             (change)="onPhotoFileSelected($event)"
-             #fileInput>
+          alt="Profile Image">
 
-      <div [ngClass]="{'hover-img': editMode}" (click)="fileInput.click()">
-        <img class="user-photo"
-             src="{{generalInfoForm.get('photo').value || 'assets/icons/no_photo.png'}}"
-             alt="Profile Image">
->>>>>>> Implemented Pagination and Improved UI.:client/src/app/components/header-section/header-section.component.html
+
+        <div [ngClass]="{'hover-img': editMode}" (click)="fileInput.click()">
+          <img class="user-photo" src="{{generalInfoForm.get('photo').value || 'assets/icons/no_photo.png'}}"
+            alt="Profile Image">
+
+        </div>
       </div>
+
+      <ng-container *ngIf="(currentPage === 'profile' && !editMode) || currentPage !== 'profile'">
+        <div class="user-detail">
+          <div>
+            <h1>{{generalInfo.first_name}} {{generalInfo.last_name}}</h1>
+            <h4>{{generalInfo.title ? generalInfo.title : ''}}</h4>
+          </div>
+          <div class="user-info">
+            <div>
+              <small *ngIf="generalInfo.city || generalInfo.state || generalInfo.country">
+                <img src="assets/icons/ic_location.svg">
+                {{(generalInfo.city ? generalInfo.city : '') + (generalInfo.city && (generalInfo.state ||
+              generalInfo.country) ? ', ' : '') + (generalInfo.state ? generalInfo.state : '') + (generalInfo.state &&
+              generalInfo.country ? ', ' : '') + (generalInfo.country ? generalInfo.country : '')}}
+              </small>
+              <small *ngIf="generalInfo.birthdate">
+                <img src="assets/icons/ic_birthday-cake.svg">
+                {{helperService.convertToFormattedString(generalInfo.birthdate, 'll')}}
+              </small>
+              <small *ngIf="generalInfo.gender">
+                <img
+                  src="{{generalInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
+                {{generalInfo.gender}}
+              </small>
+            </div>
+            <div>
+              <small *ngIf="generalInfo.ethnicity">
+                <label>Ethnicity</label>
+                {{generalInfo.ethnicity}}
+              </small>
+              <small>
+                <label>Email Verified</label>
+                <img class="valid" src="assets/icons/ic_checkbox_checked.svg">
+              </small>
+            </div>
+          </div>
+        </div>
+        <div class="user-status">
+          <simple-tag [title]="profileStatuses[generalInfo.is_looking]" onlineTag="true"
+            [active]="generalInfo.is_looking === 1" (click)="onChangeProfileStatus(generalInfo.is_looking === 1)">
+          </simple-tag>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="editMode && currentPage === 'profile'" [formGroup]="generalInfoForm">
+        <div class="edit-form">
+
+          <div class="form-field name-field">
+            <mat-form-field class="bg-transparent first-name" appearance="fill">
+              <mat-label>First Name</mat-label>
+              <input matInput placeholder="First Name" type="text" formControlName="first_name">
+            </mat-form-field>
+            <mat-form-field class="bg-transparent last-name" appearance="fill">
+              <mat-label>Last Name</mat-label>
+              <input matInput placeholder="Last Name" type="text" formControlName="last_name">
+              <mat-icon matSuffix
+                *ngIf="generalInfoForm.get('first_name').valid && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && generalInfoForm.get('last_name').valid && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">
+                done</mat-icon>
+              <mat-icon matSuffix class="error-field"
+                *ngIf="(!generalInfoForm.get('first_name').valid || !generalInfoForm.get('last_name').valid) && (generalInfoForm.get('first_name').touched || generalInfoForm.get('last_name').touched) && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">
+                close</mat-icon>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>City</mat-label>
+              <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity"
+                formControlName="city">
+              <mat-icon matSuffix
+                *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && helperService.checkSpacesString(generalInfoForm.get('city').value) && checkCityValidation()">
+                done</mat-icon>
+              <mat-icon matSuffix class="error-field"
+                *ngIf="generalInfoForm.get('city').value && helperService.checkSpacesString(generalInfoForm.get('city').value) && !checkCityValidation() && generalInfoForm.get('city').touched">
+                close</mat-icon>
+              <mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
+                <mat-option *ngFor="let city of autocomplete_cities"
+                  [value]="helperService.cityNameFromAutoComplete(city.city)" (onSelectionChange)="onSelectCity(city)">
+                  <span>{{city.city}}</span>
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>State</mat-label>
+              <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState"
+                formControlName="state">
+              <mat-icon matSuffix
+                *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && generalInfoForm.get('state').valid && checkStateValidation()">
+                done</mat-icon>
+              <mat-icon matSuffix class="error-field"
+                *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && !checkStateValidation() && generalInfoForm.get('state').touched">
+                close</mat-icon>
+              <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
+                <mat-option *ngFor="let state of autocomplete_states" [value]="state.state"
+                  (onSelectionChange)="onSelectState(state)">
+                  <span>{{state.state}}</span>
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Country</mat-label>
+              <mat-select formControlName="country">
+                <mat-option value="{{null}}">{{null}}</mat-option>
+                <mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Date Of Birth</mat-label>
+              <input matInput placeholder="MM/DD/YYYY" formControlName="birthdate" pattern="\d{1,2}/\d{1,2}/\d{4}">
+              <input class="hide" [matDatepicker]="birthdate" [max]="maxDate" (dateChange)="onChangeBirthDate($event)">
+              <mat-datepicker-toggle matSuffix [for]="birthdate"></mat-datepicker-toggle>
+              <mat-datepicker touchUi #birthdate>
+              </mat-datepicker>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Title</mat-label>
+              <input matInput placeholder="Title" type="text" formControlName="title">
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Ethnicity</mat-label>
+              <mat-select formControlName="ethnicity">
+                <mat-option *ngFor="let ethnicityType of ethnicityTypes" value="{{ethnicityType}}">{{ethnicityType}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Gender</mat-label>
+              <mat-select formControlName="gender">
+                <mat-option *ngFor="let gender of genders" value="{{gender}}">{{gender}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+        </div>
+      </ng-container>
     </div>
-
-    <ng-container *ngIf="(currentPage === 'profile' && !editMode) || currentPage !== 'profile'">
-      <div class="user-detail">
-        <div>
-          <h1>{{generalInfo.first_name}} {{generalInfo.last_name}}</h1>
-          <h4>{{generalInfo.title ? generalInfo.title : ''}}</h4>
-        </div>
-        <div class="user-info">
-          <div>
-            <small *ngIf="generalInfo.city || generalInfo.state || generalInfo.country">
-              <img src="assets/icons/ic_location.svg">
-              {{(generalInfo.city ? generalInfo.city : '') + (generalInfo.city && (generalInfo.state || generalInfo.country) ? ', ' : '') + (generalInfo.state ? generalInfo.state : '') + (generalInfo.state && generalInfo.country ? ', ' : '') + (generalInfo.country ? generalInfo.country : '')}}
-            </small>
-            <small *ngIf="generalInfo.birthdate">
-              <img src="assets/icons/ic_birthday-cake.svg">
-              {{helperService.convertToFormattedString(generalInfo.birthdate, 'll')}}
-            </small>
-            <small *ngIf="generalInfo.gender">
-              <img src="{{generalInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
-              {{generalInfo.gender}}
-            </small>
-          </div>
-          <div>
-            <small *ngIf="generalInfo.ethnicity">
-              <label>Ethnicity</label>
-              {{generalInfo.ethnicity}}
-            </small>
-            <small>
-              <label>Email Verified</label>
-              <img class="valid" src="assets/icons/ic_checkbox_checked.svg">
-            </small>
-          </div>
-        </div>
-      </div>
-      <div class="user-status">
-        <simple-tag  [title]="profileStatuses[generalInfo.is_looking]" onlineTag="true" [active]="generalInfo.is_looking === 1" (click)="onChangeProfileStatus(generalInfo.is_looking === 1)"></simple-tag>
-      </div>
-    </ng-container>
-
-    <ng-container *ngIf="editMode && currentPage === 'profile'" [formGroup]="generalInfoForm">
-      <div class="edit-form">
-
-        <div class="form-field name-field">
-          <mat-form-field class="bg-transparent first-name" appearance="fill">
-            <mat-label>First Name</mat-label>
-            <input matInput placeholder="First Name" type="text" formControlName="first_name">
-          </mat-form-field>
-          <mat-form-field class="bg-transparent last-name" appearance="fill">
-            <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Last Name" type="text" formControlName="last_name">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('first_name').valid && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && generalInfoForm.get('last_name').valid && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!generalInfoForm.get('first_name').valid || !generalInfoForm.get('last_name').valid) && (generalInfoForm.get('first_name').touched || generalInfoForm.get('last_name').touched) && helperService.checkSpacesString(generalInfoForm.get('first_name').value) && helperService.checkSpacesString(generalInfoForm.get('last_name').value)">close</mat-icon>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>City</mat-label>
-            <input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="city">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('city').value && generalInfoForm.get('city').valid && helperService.checkSpacesString(generalInfoForm.get('city').value) && checkCityValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('city').value && helperService.checkSpacesString(generalInfoForm.get('city').value) && !checkCityValidation() && generalInfoForm.get('city').touched">close</mat-icon>
-            <mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
-              <mat-option *ngFor="let city of autocomplete_cities"
-                          [value]="helperService.cityNameFromAutoComplete(city.city)"
-                          (onSelectionChange)="onSelectCity(city)">
-                <span>{{city.city}}</span>
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>State</mat-label>
-            <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState" formControlName="state">
-            <mat-icon matSuffix *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && generalInfoForm.get('state').valid && checkStateValidation()">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="generalInfoForm.get('state').value && helperService.checkSpacesString(generalInfoForm.get('state').value) && !checkStateValidation() && generalInfoForm.get('state').touched">close</mat-icon>
-            <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
-              <mat-option *ngFor="let state of autocomplete_states" [value]="state.state"
-                          (onSelectionChange)="onSelectState(state)">
-                <span>{{state.state}}</span>
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Country</mat-label>
-            <mat-select formControlName="country">
-              <mat-option value="{{null}}">{{null}}</mat-option>
-              <mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Date Of Birth</mat-label>
-            <input matInput placeholder="MM/DD/YYYY" formControlName="birthdate" pattern="\d{1,2}/\d{1,2}/\d{4}">
-            <input class="hide" [matDatepicker]="birthdate" [max]="maxDate" (dateChange)="onChangeBirthDate($event)">
-            <mat-datepicker-toggle matSuffix [for]="birthdate"></mat-datepicker-toggle>
-            <mat-datepicker
-              touchUi
-              #birthdate
-            >
-            </mat-datepicker>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Title</mat-label>
-            <input matInput placeholder="Title" type="text" formControlName="title">
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Ethnicity</mat-label>
-            <mat-select formControlName="ethnicity">
-              <mat-option *ngFor="let ethnicityType of ethnicityTypes"
-                          value="{{ethnicityType}}">{{ethnicityType}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div class="form-field">
-          <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Gender</mat-label>
-            <mat-select formControlName="gender">
-              <mat-option *ngFor="let gender of genders" value="{{gender}}">{{gender}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-      </div>
-    </ng-container>
-  </div>
 </ng-container>
