--- a/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
@@ -176,6 +176,8 @@
     img {
       grid-area: image;
       width: 70px;
+      height: 70px;
+      border-radius: 50%;
     }
     label {
       grid-area: title;
