--- a/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
@@ -211,6 +211,7 @@
         margin: 0 10px;
         background: $white;
         border-radius: 50%;
+        opacity: 0.7;
         cursor: pointer;
         &.cancel {
           color: map-get($md-cfred, 500);
@@ -227,14 +228,22 @@
       height: 30px;
       background: $white;
       border-radius: 50%;
-      color: map-get($md-cfred, 500);
+      color: rgba(map-get($md-cfaccent, 500), .1);
       top: 5px;
       right: 15px;
       cursor: pointer;
+      &:hover {
+        color: rgba(map-get($md-cfred, 500), .8);
+      }
     }
     &:hover {
       .overlay {
         @include flex(row, center, center);
+        mat-icon {
+          &:hover {
+            opacity: 1;
+          }
+        }
       }
     }
   }
