--- a/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.html
+++ b/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.html
@@ -10,7 +10,7 @@
         <img src="{{ contact.photo ? contact.photo : 'assets/icons/no_photo.png' }}">
         <label>{{ contact.first_name + ' ' + contact.last_name }}</label>
         <a>{{(contact.city_id ? contact.city : '') + (contact.city_id && (contact.state_id || contact.country_id) ? ', ' : '') + (contact.state_id ? contact.state : '') + (contact.state_id && contact.country_id ? ', ' : '') + (contact.country_id ? contact.country : '')}}</a>
-        <mat-icon *ngIf="currentPage === 'contacts'" class="remove" (click)="deleteContact(i)">cancel</mat-icon>
+        <mat-icon *ngIf="currentPage === 'contacts'" class="remove" (click)="deleteContact(i)">highlight_off</mat-icon>
         <div *ngIf="currentPage === 'incoming-requests'" class="overlay">
           <mat-icon class="accept" (click)="acceptContactRequest(i)">check_circle</mat-icon>
           <mat-icon class="cancel" (click)="deleteContactRequest(i)">cancel</mat-icon>
